Add generator GAV as task input
Fixes #639