@@ -2,7 +2,8 @@ package dk.mada.jaxrs.gradle;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
@@ -59,10 +60,10 @@ public abstract class DownloadOpenApiDocument extends DefaultTask {
             Files.createDirectories(toPath.getParent());
             deleteExistingDocuments(toPath);
 
-            try (InputStream is = new URL(url).openStream()) {
+            try (InputStream is = new URI(url).toURL().openStream()) {
                 Files.copy(is, toPath, StandardCopyOption.REPLACE_EXISTING);
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             throw new UncheckedIOException("Failed to download file from " + url + " to " + toPath, e);
         }
     }
